# philander

./: .gitignore  .project  .pydevproject  .readthedocs.yaml  ActorUnit.py  BMA456.py  BatteryCharger.py  Device.py  EventHandler.py  EventPublisher.py  FGSystemManagement.py  InterruptSource.py  LICENSE.txt  MAX77960.py  NullCharger.py  Sensor.py  SerialDevice.py  SmartButton.py  SmartLED.py  Watchdog.py  changelog.md  main2Sensors.py  mainAcc.py  mainAccel11.py  mainFastGait.py  mainHTU21D.py  mainPowerMon.py  mainSimpleShock.py  mainTest.py  mainVibrasense.py  p15.cfg  p47.cfg  p57.cfg  p59.cfg  p60.cfg  pyproject.toml  readme.md  readme.txt  requirements.txt  vibrasense.py  (+1 more)
.externalToolBuilders/: Build Dist.launch  Sphinx API Doc.launch  Sphinx Doc Build.launch
doc/: conf.py  index.rst
philander/: Accelerometer.py  AnalogueVoltmeter.py  BMA456.py  BatteryCharger.py  Configurable.py  Device.py  FGSystemManagement.py  FuelGauge.py  HTU21D.py  InterruptSource.py  Interruptable.py  MAX77960.py  Module.py  Sensor.py  SerialSensor.py  Serial_Bus.py  Watchdog.py  _BMA456_Feature.py  _BMA456_Reg.py  __init__.py  accelerometer.py  actuator.py  adc.py  adc_micropython.py  battery.py  ble.py  bma456.py  bma456_reg.py  button.py  charger.py  configurable.py  dictionary.py  display.py  display_graphic.py  display_text.py  gasgauge.py  gpio.py  gpio_periphery.py  gpio_rpi.py  htu21d.py  (+46 more)
test/: __init__.py  fastgait.cfg  generalTestSuite.py  micromenu.py  testAccel.py  testActorUnit.py  testButton.py  testCharger.py  testFastgait.py  testGasgauge.py  testLED.py  testPotentiometer.py  testPymitter.py  testSerialbus.py  utaccel.py  utadc.py  utbma456.py  (+22 more)
(+9 files in other folders)
