[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philander"
version = "0.1.0"
authors = [
  { name="Oliver Maye", email="maye@ihp-microelectronics.com" },
]
description = "Driver collection for embedded systems or wireless sensor nodes."
readme = "readme.md"
requires-python = ">=3.4"
license = {file = "LICENSE.txt"}
keywords = ["WSN", "hardware abstraction", "platform" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
]
dependencies = [
	"pymitter",
	"smbus2",
	"python-periphery",
]

[project.urls]
"Homepage" = "https://github.com/olimaye/philander"
"Bug Tracker" = "https://github.com/olimaye/philander/issues"

[project.optional-dependencies]
optSerial = [
  "smbus2",
]
optGPIO = [
  "RPi.GPIO",
]
optBLE = [
  "bleak",
]